<resources>
    <string name="app_name">SGPS</string>
    <string name="empty"></string>
    <string name="menu_copyright">Copyright</string>
    <string name="menu_ublox">Initialize GPS Chip</string>
    <string name="menu_settings">Ublox Settings</string>
    <string name="menu_showloc">Show Location</string>
    <string name="menu_hideloc">Hide Location</string>
    <string name="menu_info">Info</string>
    <string name="menu_satellite">Satellite</string>
    <string name="menu_gps_cfg">AGPS Setting</string>
    <string name="menu_agps_log">AGPS log</string>
    <string name="title_time">Time:</string>
    <string name="time"></string>
    <string name="title_lat">Latitude:</string>
    <string name="title_lat_option">Latitude:(option)</string>
    <string name="latitude"></string>
    <string name="title_lon">Longitude:</string>
    <string name="title_lon_option">Longitude:(option)</string>
    <string name="first_latitude_text">First Latitude:</string>
    <string name="first_longtitude_text">First Longitude:</string>
    <string name="longitude"></string>
    <string name="title_alt">Altitude:</string>
    <string name="altitude"></string>
    <string name="title_acc">Accuracy:</string>
    <string name="accuracy"></string>
    <string name="title_bear">Heading:</string>
    <string name="bearing"></string>
    <string name="title_speed">Speed:</string>
    <string name="speed"></string>
    <string name="nema"></string>
    <string name="debug"></string>
    <string name="title_ttff">TTFF:</string>
    <string name="title_fix">Fix:</string>
    <string name="ttff"></string>
    <string name="fix"></string>
    <string name="title_provider">Provider:</string>
    <string name="title_status">Status:</string>
    <string name="provider"></string>
    <string name="status"></string>
    <string name="title_distance">Distance:</string>
    <string name="distance"></string>
    <string name="title_date">Date:</string>
    <string name="date"></string>
    <string name="title_gps_version">GPS version:</string>
    <string name="chipversion">UNKNOWN</string>
    <string name="title_sgps_version">SGPS version:</string>
    <string name="mnlversion">NMEA5.0</string>
    <string name="hot">Hot</string>
    <string name="warm">Warm</string>
    <string name="cold">Cold</string>
    <string name="full">Factory</string>
    <string name="start">Restart</string>
    <string name="restart">AGPS restart</string>
    <string name="satellites">Satellites</string>
    <string name="information">Information</string>
    <string name="gps_test">GPS Test</string>
    <string name="nmea_log">NMEA Log</string>
    <string name="nmea_start">start</string>
    <string name="nmea_stop">stop</string>
    <string name="nmea_clear">clear</string>
    <string name="nmea_save">save</string>
    <string name="nmea_hint">The NMEA log below is being saved:</string>
    <string name="gps_test_start">Start</string>
    <string name="gps_test_times">Times 0 – 999:</string>
    <string name="gps_test_interval">Interval 0 – 999(s):</string>
    <string name="no_sdcard">Please check the SD card.</string>
    <string name="gps_test_current_times">Current Times:</string>
    <string name="need_3d_fix">Need 3D Fix</string>
    <string name="last_ttff">Last TTFF:</string>
    <string name="reconnect_countdown">Count down:</string>
    <string name="restart_mode">Restart Mode:</string>
    <string name="gps_test_stop">Stop</string>
    <string name="gps_test_mean_ttff">Avarage TTFF:</string>
    <string name="nmea_dbg_dbg">Undried</string>
    <string name="nmea_dbg_nmea">Undried</string>
    <string name="nmea_dbg_dbg_file">Undried</string>
    <string name="nmea_dbg_nmea_file">Undried</string>
    <string name="hot_still">Undried</string>
    <string name="gps_hw_test">Undried</string>
    <string name="gps_jamming_scan">JAM scan</string>
    <string name="jamming_scan_times">20</string>
    <string name="toast_input_times">Please input test times</string>
    <string name="toast_input_range">Please input a number between 0 and 999</string>
    <string name="toast_input_interval">Please input interval</string>
    <string name="toast_gps_input_range">Please input a number between -360 and 360 or left empty</string>
    <string name="btn_name_dbg2socket_enable">Enable dbg2socket [Need Restart]</string>
    <string name="btn_name_dbg2socket_disable">Disable dbg2socket [Need Restart]</string>
    <string name="btn_name_nmea2socket_enable">Enable nmea2socket [Need Restart]</string>
    <string name="btn_name_nmea2socket_disable">Disable nmea2socket [Need Restart]</string>
    <string name="btn_name_dbg2file_enable">Enable dbg2file [Need Restart]</string>
    <string name="btn_name_dbg2file_disable">Disable dbg2file [Need Restart]</string>
    <string name="btn_name_dbg2ddms_disable">Disable dbg2ddms [Need Restart]</string>
    <string name="btn_name_dbg2ddms_enable">Enable dbg2ddms [Need Restart]</string>
    <string name="btn_name_hotstill_disable">Disable Hotstill [Need Restart]</string>
    <string name="btn_name_hotstill_enable">Enable Hotstill [Need Restart]</string>
    <string name="btn_name_dbg2gpsdoctor_enable">Enable dbg2GPSDoctor [Need Restart]</string>
    <string name="btn_name_dbg2gpsdoctor_disable">Disable dbg2GPSDoctor [Need Restart]</string>
    <string name="toast_save_log_succeed_to">Save NmeaLog to %1$s Succeed!</string>
    <string name="toast_save_log_succeed">Save NmeaLog failed</string>
    <string name="toast_save_log_failed">Save NmeaLog failed</string>
    <string name="toast_create_file_failed">Create new file failed</string>
    <string name="toast_nmealog_save_at">NMEA log saved at %1$s</string>
    <string name="toast_autotestlog_save_at">AutoTest log saved at %1$s</string>
    <string name="toast_no_log">There is no log to save!</string>
    <string name="toast_exceed_time">Exceed %1$s seconds</string>
    <string name="toast_test_interrupted">GPS auto test interrupted</string>
    <string name="toast_jamming_succeed">Jamming scan setting success</string>
    <string name="toast_jamming_failed">Jamming scan setting fail</string>
    <string name="toast_first_fix">GPS Fix after %1$d %2$s</string>
    <string name="menu_run_bg_disable">Disable Run in BG. [Need Restart.]</string>
    <string name="menu_run_bg_enable">Enable Run in BG. [Need Restart.]</string>
    <string name="provider_status_enabled">%1$s enabled</string>
    <string name="provider_status_disabled">%1$s disabled</string>
    <string name="gps_status_started">STARTED</string>
    <string name="gps_status_stopped">STOPPED</string>
    <string name="gps_status_first_fix">FIRST_FIX</string>
    <string name="gps_status_unavailable">UNAVAILABLE</string>
    <string name="gps_status_available">AVAILABLE</string>
    <string name="gps_status_unknown">Spreadtrum.Inc</string>
    <string name="time_unit_ms">&#160;ms</string>
    <string name="dialog_title_stop">Stopping</string>
    <string name="dialog_message_stop">Please wait …</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_message_error">Error dialog ID</string>
    <string name="command_error">Command error</string>
    <string name="gps_test_running_warn">Please stop GPS test</string>
    <string name="supl_log">unDired</string>
    <string name="btn_name_supllog_disable">Disable GPS.LOG</string>
    <string name="btn_name_supllog_enable">Enable GPS.LOG</string>
    <string name="uart_log_switch">Save in BG</string>
    <string name="agps_title">AGPS</string>
    <string name="agps_plane_switch_text">CP and UP switching</string>
    <string name="radio_control_text">Control Plane</string>
    <string name="radio_user_text">User Plane</string>
    <string name="agps_control_plane_title_text">Control Plane Settings</string>
    <string name="agps_molr_position_method_title_text">MOLR Position Method</string>
    <string name="radio_location_estimate_text">Location Estimate</string>
    <string name="radio_assistance_data_text">Assistance Data</string>
    <string name="cb_external_address_text">External Address</string>
    <string name="cb_mlc_number_text">MLC Number</string>
    <string name="bt_agps_save_text">Save</string>
    <string name="auto_reset_text">CP Auto Reset</string>
    <string name="agps_sim_selection_text">SIM Selection</string>
    <string name="radio_sim1_text">SIM1 Preferred</string>
    <string name="radio_sim2_text">SIM2 Preferred</string>
    <string name="ttff_calculating">Calculating</string>
    <string name="sgps_swtich_text">SGPS Switch</string>
    <string name="sgps_start">开始</string>
    <string name="sgps_stop">结束</string>
    <string name="agps_mode_title">A-GPS Mode</string>
    <string name="radio_agps_mode_standalone_text">standalone</string>
    <string name="radio_agps_mode_msb_text">MSB</string>
    <string name="radio_agps_mode_msa_text">MSA</string>
    <string name="user_plane_settings_title">User Plane Settings</string>
    <string name="slp_template_text">SLP Template</string>
    <string name="slp_test_text">SLP Test</string>
    <string name="slp_address_title">SLP Address</string>
    <string name="slp_port_title">SLP Port</string>
    <string name="edit">Edit</string>
    <string name="tls_checkbox_text">TLS Enable</string>
    <string name="set_id_text">Set ID</string>
    <string name="radio_ipv4_text">Ipv4</string>
    <string name="radio_imsi_text">IMSI</string>
    <string name="accuracy_unit_text">Accuracy unit</string>
    <string name="radio_k_value_text">K-Value</string>
    <string name="radio_meter_text">Meter</string>
    <string name="horizontal_accuracy_title">Horizontal Accuracy</string>
    <string name="vertical_accuracy_title">Vertical Accuracy</string>
    <string name="location_age_title">Location Age</string>
    <string name="delay_title">Delay</string>
    <string name="certificate_verification_checkbox_text">Certificate Verification</string>
    <string name="enable_lab_iot_test_checkbox_text">Enable Lab IOT Test</string>
    <string name="enable_ecid_checkbox_text">Enable eCID</string>
    <string name="supl2_title">SUPL 2.0</string>
    <string name="supl2_enable_checkbox_text">Enable SUPL 2.0</string>
    <string name="silr_text">SILR</string>
    <string name="msisdn_title">MSISDN</string>
    <string name="enable_3rd_msisdn_checkbox_text">Enable 3rd MSISDN</string>
    <string name="trigger_settings_title">Trigger Settings</string>
    <string name="start_text">Start</string>
    <string name="abort_text">Abort</string>
    <string name="trigger_type_text">Trigger Type</string>
    <string name="radio_periodic_text">Periodic</string>
    <string name="radio_area_text">Area</string>
    <string name="posmethod_title">PosMethod</string>
    <string name="area_settings_title">Area Settings</string>
    <string name="perodic_settings_title">Perodic Settings</string>
    <string name="area_type_title">Area Type</string>
    <string name="area_type_text">Area Type</string>
    <string name="min_interval_title">Min Interval</string>
    <string name="single_satellite_text" >Single satellite Switch</string>
    <string name="spreadorbit_swtich_text">SpreadOrbit Switch</string>
    <string name="real_eph_switch_text">Real-EPH Switch</string>
    <string name="gnss_log_switch_text">GNSS Log Switch</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="GpsOnly">GPS Only</string>
    <string name="GlonassOnly">GLONASS Only</string>
    <string name="BDSOnly">BDS Only</string>
    <string name="GlonassGps">GLONASS+GPS</string>
    <string name="GpsBDS">GPS+BDS</string>
    <string name="title_average_cn0">AverageCN0:</string>
    <string name="average_cn0"></string>
    <string name="btn_assert_text">Trigger assert</string>
    <string name="gps_img_mode">GPS IMG MODE</string>
    <string name="gps_beidou">GPS BEIDOU</string>
    <string name="gps_glonass">GPS GLONASS</string>
</resources>